refactor mappers